🔧 FIX|Responsive profile component on mobile

--- a/src/scss/layouts/_Profile.scss
+++ b/src/scss/layouts/_Profile.scss
@@ -545,7 +545,7 @@
       align-items: center;
       flex-direction: column;
       &__item {
-        width: 8.5em;
+        width: 13em;
         margin: 0 0.1em $gutter 0.1em;
 
         &__name {
